Added better CSS for the city list. Clicking on a row will now take you to that city's page. Clicking on a header will sort the list by that header.

--- a/client/src/City.css
+++ b/client/src/City.css
@@ -1,6 +1,7 @@
 table, th, td {
     border: 1px solid;
     font-weight: normal;
+    border-collapse: collapse;
 }
 
 tr.flipped-table { display: block; float: left; }
