--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+#cities-table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#cities-table td, #cities-table th {
+  border: 1px solid #454545;
+  padding: 8px;
+}
+
+#cities-table tr:nth-child(even){background-color: #303030;}
+
+#cities-table tr:hover {background-color: #454545;}
+
+#cities-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
