--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 .logo {
   height: 6em;
@@ -52,9 +46,9 @@
   padding: 8px;
 }
 
-#cities-table tr:nth-child(even){background-color: #303030;}
+#cities-table tr:nth-child(even){background-color: #D0D0D0;}
 
-#cities-table tr:hover {background-color: #454545;}
+#cities-table tr:hover {background-color: #A0A0A0;}
 
 #cities-table th {
   padding-top: 12px;
