Updated CSS for compare table. Now changes text color to show which is lower/higher

--- a/client/src/City.css
+++ b/client/src/City.css
@@ -10,3 +10,20 @@ tr.flipped-table { display: block; float: left; }
 .table-header {
     font-weight: bold;
 }
+
+.negative-compare {
+    color: red !important;
+    border-color: black;
+}
+
+.positive-compare {
+    color: limegreen !important;
+    border-color: black;
+}
+
+.thead-dark th {
+    border-color: #000000;
+    background-color: #555555;
+    color:  #BBBBBB;
+
+}
