--- a/client/src/App.css
+++ b/client/src/App.css
@@ -108,3 +108,64 @@ body {
 .invisible {
   visibility: hidden;
 }
+
+.center-text {
+  text-align: center;
+}
+
+.multi-choice-option {
+  background-color: #E7BBE3;
+  border-color: #b450acdb;
+  color: #442B48;
+  border: 3px;
+  border-style: solid;
+  margin-bottom:0.5em;
+  border-radius: 0.25em;
+  font-size: large;
+}
+.multi-choice-option:has(:checked) {
+  background-color: #442B48;
+  border-color: #b450acdb;
+  color: #E7BBE3;
+}
+
+.selector {
+  margin-left:0px auto;
+  text-align: center;
+}
+
+.slider::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #E7BBE3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #442B48;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-webkit-slider-runnable-track:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
